feat(module-system): pom-derived compiler + javadoc arguments (#48)